# wait-and-load

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
tests/: data.yaml  test_wait_and_load.py  test_wait_and_load_main.py
tests/consul/: server.json
wait_and_load/: __init__.py  __main__.py
